2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell-install-rhel7.spec.in' that prevented
	'/etc/systemd/system/mariadb.service.d/limit.conf' from being
	installed on CentOS 7 setups.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.3.
2017-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Added 'centos7/install_mingw32_devel.sh'.
2017-03-18 Fred Gleason <fredg@paravelsystems.com>
	* Added 'ntfs-3g' and 'ntfsprogs' packages to the CentOS 7 install.
2017-03-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.4.
2017-06-22 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'lame' package to the CentOS 6 and 7 install.
	* Added the 'openssl-devel' package to the CentOS 6 and 7
	development installs.
2017-06-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.5.
2017-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Added yum call to remove 'openbox' package in
	'centos7/install_rivendell.sh'.
2017-09-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.6.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a section on installing CentOS-7 base distribution.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0.
2018-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'centos7/' setup to install Rivendell 3.x Beta.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regression in the 'centos7/' installation script when using
	'--server' mode.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'win32_setups' share from the Samba configuration in
	the 'centos7/' installation script.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'centos7/' installer to use the Operations Guide
	from the 'rivendell-opsguide' package.
	* Added custom tailored default configuration for Xfce4 to the
	'centos7/' installer.